--- a/WebPortfolio/WebPortfolio/Views/Shared/_Layout.cshtml
+++ b/WebPortfolio/WebPortfolio/Views/Shared/_Layout.cshtml
@@ -9,8 +9,8 @@
 </head>
 <body>
     <header class="header">
-            <h1>Titulo Principal</h1>
-            <h2>Subtitulo</h2>
+            <h1>#Hola Mundo</h1>
+            <h2>Soy Ricardo Alejandro Pérez Santillán</h2>
     </header>
 
     <div class="container">
