new Project implemented
Spa schoolar project implemented, with new section thinking for all projects (links to visit respective pages)

--- a/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
+++ b/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
@@ -44,6 +44,13 @@
                                 Proyecto escolar realizado con PHP y XAMPP para el registro de infracciones en automoviles. 
                             </p>
                         </div>
+
+                        <div class="Proyect-card card" data-project="Spa-Project">
+                            <h3>Spa Page</h3>
+                            <p>
+                                Proyecto escolar de pagina web responsive y UX/UI
+                            </p>
+                        </div>
                     </div>
                 </div>
             </section>
