--- a/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
+++ b/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
         <section class="section">
             <section class="panels">
                 <div class="panel">
-                    <div
-                        style="width: 100%; height: 200px; background-color: var(--borde); border-radius: 10px; margin-bottom: 15px; display: flex; align-items: center; justify-content: center; color: var(--subtexto);">
+                    <div class="foto-profesional">
+                        <img src="_src_image"/>
                         Foto Profesional
                     </div>
                     <h2>About Me</h2>
