images adding and reestructure

--- a/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
+++ b/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
@@ -8,15 +8,22 @@
                         Foto Profesional
                     </div>
                     <h2>About Me</h2>
-                    <p>Ingeniero en TI con experiencia en desarrollo web, automatización y análisis de datos. 
+                    <p>Ingeniero en TI con experiencia en desarrollo web y análisis de datos. 
                         He creado soluciones empresariales en .NET y Python para Daikin. 
-                        Busco optimizar procesos con software eficiente, alineado a estándares ISO, 
-                        sin depender de servicios externos.</p>
+                        Busco optimizar procesos con software eficiente, alineado a estándares ISO.</p>
                 </div>
 
                 <!-- Projects Section -->
                 <div class="panel">
                     <h2>Proyectos</h2>
+
+                    <div class="Proyect-card card" id="portfolio-web" data-project="Portafolio-Web">
+                        <h3>Portfolio Web Personal</h3>
+                        <p>
+                            aplicacion web .NET C# con diseño obscuro minimalista y secciones dinámicas
+                            para mostrar proyectos y experiencia.
+                        </p>
+                    </div>
 
                     <div class="Proyect-cards">
                         <div class="Proyect-card card" data-project="Overtime-Request">
@@ -26,22 +33,16 @@
 
                         <div class="Proyect-card card" data-project="Etiquetas">
                             <h3>Etiquetas (Warehouse)</h3>
-                            <p>Generador de etiquetas para piezas basado en datos del ERP Oracle; desarrollado en C# 
+                            <p>
+                                Generador de etiquetas para piezas basado en datos del ERP Oracle; desarrollado en C#
                                 con conexión directa a API interna.
-                            </p>
-                        </div>
-
-                        <div class="Proyect-card card" data-project="Portafolio-Web">
-                            <h3>Portfolio Web Personal</h3>
-                            <p>aplicacion web .NET C# con diseño obscuro minimalista y secciones dinámicas
-                                para mostrar proyectos, experiencia, y contacto.
                             </p>
                         </div>
 
                         <div class="Proyect-card card" data-project="Placas">
                             <h3>Placas</h3>
                             <p>
-                                Proyecto escolar realizado con PHP y XAMPP para el registro de infracciones en automoviles. 
+                                Proyecto escolar realizado con PHP y XAMPP para el registro de infracciones en automoviles.
                             </p>
                         </div>
 
@@ -50,7 +51,7 @@
                             <p>
                                 Proyecto escolar de pagina web responsive y UX/UI
                             </p>
-                        </div>
+                        </div>                        
                     </div>
                 </div>
             </section>
@@ -143,7 +144,6 @@
             <h2 class="modal-title" id="modal-title">Titulo</h2>
             <button class="close-btn" id="close-modal">&times;</button>
         </div>
-
         <div class="modal-body" id="modal-body"></div>
     </div>
 </div>
