--- a/WebPortfolio/WebPortfolio/wwwroot/css/style.css
+++ b/WebPortfolio/WebPortfolio/wwwroot/css/style.css
@@ -146,6 +146,10 @@ h4 {
         color: var(--subtexto);
     }
 
+#portfolio-web {
+    margin-bottom: 15px;
+}
+
 .panel, .contact-panel {
     padding: 20px;
     background-color: var(--panel);
@@ -463,6 +467,9 @@ body.modal-open {
 }
 
 .close-btn {
+    position: sticky;
+    top: 0;
+    right: 0;
     background: none;
     border: none;
     font-size: 2.5rem;
