new project-card added

--- a/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
+++ b/WebPortfolio/WebPortfolio/Views/Home/Index.cshtml
@@ -25,6 +25,13 @@
                         </p>
                     </div>
 
+                    <div class="Proyect-card card" id="master-lbl" data-project="master-label-web">
+                        <h3>Master Label web App</h3>
+                        <p>
+                            App support for show issues on Master label printings.
+                        </p>
+                    </div>
+
                     <div class="Proyect-cards">
                         <div class="Proyect-card card" data-project="Overtime-Request">
                             <h3>Overtime Request</h3>
