--- a/WebPortfolio/WebPortfolio/wwwroot/css/style.css
+++ b/WebPortfolio/WebPortfolio/wwwroot/css/style.css
@@ -125,7 +125,7 @@ h4 {
     color: var(--subtexto);
 }
 
-.Proyect-card, .xp-card {
+.Proyect-card {
     background-color: var(--fondo);
     padding: 15px;
     border-radius: 10px;
@@ -146,7 +146,7 @@ h4 {
         color: var(--subtexto);
     }
 
-#portfolio-web {
+#portfolio-web, #master-lbl {
     margin-bottom: 15px;
 }
 
