--- a/WebPortfolio/WebPortfolio/wwwroot/css/style.css
+++ b/WebPortfolio/WebPortfolio/wwwroot/css/style.css
@@ -125,7 +125,7 @@ h4 {
     color: var(--subtexto);
 }
 
-.Proyect-card {
+.Proyect-card, .xp-card {
     background-color: var(--fondo);
     padding: 15px;
     border-radius: 10px;
