--- a/WebPortfolio/WebPortfolio/wwwroot/css/style.css
+++ b/WebPortfolio/WebPortfolio/wwwroot/css/style.css
@@ -113,11 +113,11 @@ h4 {
 
 .foto-profesional {
     width: 100%;
-    height: 200px;
-    background-color: var(--borde);
-    /*background-image: image("foto_profesional.png"); */
-    /*background-repeat: no-repeat;*/
-    border-radius: 10px;
+    height: 650px;
+    background-image: url("/src/profile-photo/profile-img.png");
+    background-repeat: no-repeat;
+    background-size: contain;
+    border-radius: 15px;
     margin-bottom: 15px;
     display: flex;
     align-items: center;
